# Mingnix

./: Cargo.toml  Readme.md
src/: app.rs  main.rs  util.rs
src/config/: default.rs
src/http/: request.rs  response.rs
src/macher/: host.rs
src/matcher/: ip.rs  location.rs  wildcard.rs
src/server/: handlers.rs
static/: 404.html  index.html  style.css  test.html  test.php
