[package]
name = "minginx"
version = "0.1.0"
edition = "2021"
authors = ["qiming <qimingme@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
hyper = { version = "1.0.0-rc.3", features = ["full"] }
