[package]
name = "minginx"
version = "0.1.0"
edition = "2021"
authors = ["qiming <qimingme@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compression = { version = "0.3.14", features = ["tokio", "gzip", "deflate", "brotli"] }
base64 = "0.13.0"
clap = { version = "2.33.3", default-features = false }
dirs = "4.0.0"
futures-util = { version = "0.3.12", default-features = false, features = ["std"] }
globset = "0.4.8"
hyper = { version = "0.14.18", features = ["full"] }
hyper-rustls = { version = "0.23.0", features = ["http1", "http2", "native-tokio", "tls12"] }
lazy_static = "1.4.0"
mime_guess = "2.0.4"
percent-encoding = "2.1.0"
regex = "1.5.5"
time = "=0.2.22" # TODO
tokio = { version = "1.18.5", features = ["rt-multi-thread", "macros", "io-std", "fs"] }
tokio-rustls = "0.22.0"
tokio-util = { version = "0.7.2", default-features = false, features = ["codec"] }