[package]
name = "minginx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
tokio = { version = "1.23.0", features = ["full"] }
clap = "3.0.0-beta.5"
log = "0.4"
env_logger = "0.9"